--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class="content">
         <div class="left-col"><h1>HAPPY<br> BirthDay</h1>
-            <img src="birthday.jpg" id="birthday">
+            <img src="birthday.JPG" id="birthday">
         </div>
                <div class="right-col">
                 <p id="focus">The queen to the <em>Arinola's</em><br>Family</p>
