--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <img src="birthday.JPG" id="birthday">
         </div>
                <div class="right-col">
-                <p id="focus">The queen to the <em>Arinola's</em><br>Family</p>
-                <p>You are indeed a gift to your family<br>And a smile unto your generation</p>
+                <p style="color: #800000">The queen to the <em>Arinola's</em><br>Family</p>
+                <p style="color: #800000">You are indeed a gift to your family<br>And a smile unto your generation</p>
 
                </div>
     </div>
@@ -77,14 +77,7 @@
                 <td>Seconds</td>
             </tr>
         </table>
-        <div class="bubbles">
-        <img src="bubble.png">
-        <img src="bubble1.png">
-         <img src="bubble.png">
-        <img src="bubble1.png">
-         <img src="bubble.png">
-        <img src="bubble1.png">
-
+        
     
                 <script type="text/javascript">
 
