--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <img src="birthday.JPG" id="birthday">
         </div>
                <div class="right-col">
-                <p style="color: #800000">The queen to the <em>Arinola's</em><br>Family</p>
+                <p style="color: #800000; margin-right: -50px; margin-top: -270%; ">The queen to the <em>Arinola's</em><br>Family</p>
                 <p style="color: #800000">You are indeed a gift to your family<br>And a smile unto your generation</p>
 
                </div>
